[package]
name = "docker-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip", "compression-br"] }
hyper = "1"
reqwest = { version = "0.11", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
futures = "0.3"
bytes = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
futures-util = "0.3"
tracing-appender = "0.2"
thiserror = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli"] }
