[package]
name = "docker-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors", "compression-gzip", "compression-br"] }
hyper = "1.8.1"
reqwest = { version = "0.12.24", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "fmt", "ansi"] }
futures = "0.3.31"
bytes = "1.11.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
toml = "0.9.8"
futures-util = "0.3.31"
tracing-appender = "0.2.3"
thiserror = "2.0.17"
tokio-util = { version = "0.7.17", features = ["io"] }
async-compression = { version = "0.4.33", features = ["tokio", "gzip", "brotli"] }
